test/fixtures/config/theming/error/taskError/.gulp.js
module.exports = {
  msgs: {
    error: {
      taskError: '{TIMESTAMP}TASK ERROR: {TaskName:{1}}',
    },
  },
  theme: {
    TaskName: '**{1}**',
  },
};
